--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header h1 {
 }
 
 .info h3 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Helvetica', sans-serif;
   font-size: 16px;
   margin-bottom: 5px;
 }
